# rustore-apk-downloader

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_RU.md  README_WINDOWS.md
.github/workflows/: pr-checks.yml  release.yml
src/: application.rs  cli.rs  display.rs  domain.rs  infrastructure.rs  main.rs  util.rs
