[package]
authors = ["RD2W"]
name = "rustore_apk_downloader"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "native-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "8.5.0"
anyhow = "1.0"
thiserror = "2.0.18"
log = "0.4"
env_logger = "0.11.8"
regex = "1.0"
sha2 = "0.11.0"

futures-util = "0.3"
