[package]
authors = ["RD2W"]
name = "rustore_apk_downloader"
version = "1.2.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "8.6.0"
anyhow = "1.0.103"
thiserror = "2.0.18"
log = "0.4.33"
env_logger = "0.11.11"
regex = "1.12.4"
sha2 = "0.11.0"

futures-util = "0.3"
